--- a/css/style.css
+++ b/css/style.css
@@ -181,8 +181,8 @@ figure figcaption {
 
 #colorlib-aside .author-img img{
 	height: 100%; 
-    object-fit: contain;
-	padding: 30px;
+  object-fit: fill;
+	border-radius: 100%;
 }
 #colorlib-aside h1 {
 	font-family: "Raleway", sans-serif;
@@ -205,7 +205,6 @@ figure figcaption {
 	display: block;
 	text-align: center;
 	color: #000;
-	padding-right: 0.3em;
 }
 #colorlib-aside #colorlib-main-menu {
 	display: block;
@@ -853,7 +852,6 @@ body.offcanvas .colorlib-nav-toggle {
 	display: block;
 	width: 40px;
 	height: 40px;
-	background: #2c98f0;
 	-webkit-border-radius: 50%;
 	-moz-border-radius: 50%;
 	-ms-border-radius: 50%;
@@ -862,14 +860,12 @@ body.offcanvas .colorlib-nav-toggle {
 	-moz-box-shadow: 0 0 0 5px #f2f3f7;
 	-webkit-box-shadow: 0 0 0 5px #f2f3f7;
 	box-shadow: 0 0 0 5px #f2f3f7;
-	line-height: 40px;
 	float: left;
 }
 .timeline-centered
 	.timeline-entry
 	.timeline-entry-inner
 	.timeline-icon.color-2 {
-	background: brown;
 	color: white;
 }
 .timeline-centered
